drive report zip upload

--- a/Reports/Project_Report_8sem/Report.tex
+++ b/Reports/Project_Report_8sem/Report.tex
@@ -99,80 +99,81 @@ bottom=1.0in,
 \end{center}
 \newpage
 
+\includepdf[pages={1}]{Project certificate page.pdf}
 
 % Certificate Page
-\begin{center}
-    \LARGE \textbf{ST JOSEPH ENGINEERING COLLEGE}
-    \par
-    \Large \textbf{An Autonomous Institution}
-    \par \large{(Affiliated to VTU Belagavi, Recognized by AICTE, Accredited by NBA)}
-    \par \vspace{3pt}
-    \large \textbf{Vamanjoor, Mangaluru - 575028, Karnataka}
-    \par \vspace{12pt}
-    \par
-    \large \textbf{DEPT. OF COMPUTER SCIENCE AND ENGINEERING}
-    \par
-    \begin{figure}[hbtp]
-        \centering
-        \includegraphics[scale=0.5]{./pic/sjeclogo}
-    \end{figure}
+% \begin{center}
+%     \LARGE \textbf{ST JOSEPH ENGINEERING COLLEGE}
+%     \par
+%     \Large \textbf{An Autonomous Institution}
+%     \par \large{(Affiliated to VTU Belagavi, Recognized by AICTE, Accredited by NBA)}
+%     \par \vspace{3pt}
+%     \large \textbf{Vamanjoor, Mangaluru - 575028, Karnataka}
+%     \par \vspace{12pt}
+%     \par
+%     \large \textbf{DEPT. OF COMPUTER SCIENCE AND ENGINEERING}
+%     \par
+%     \begin{figure}[hbtp]
+%         \centering
+%         \includegraphics[scale=0.5]{./pic/sjeclogo}
+%     \end{figure}
 
 
-    {\Large \textbf{CERTIFICATE}}
-\end{center}
-\justifying
-\par
-\setstretch{1.2}
-\noindent
-Certified that the project work entitled \textbf{"Cloud-Based Smart Monitoring System
-for Baby Health and Safety"} carried out by\vspace{0.25in}
-\par
+%     {\Large \textbf{CERTIFICATE}}
+% \end{center}
+% \justifying
+% \par
+% \setstretch{1.2}
+% \noindent
+% Certified that the project work entitled \textbf{"Cloud-Based Smart Monitoring System
+% for Baby Health and Safety"} carried out by\vspace{0.25in}
+% \par
 
-\noindent
-% \vspace{2pt}
-% \textbf{\large \quad \quad \qquad Name 1}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS001}\\ \vspace{2pt}
-% \textbf{\large \quad \quad \qquad Student Name 2}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS002}\\ \vspace{2pt}
-% \textbf{\large \quad \quad \qquad Student Name 3}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS003}\\ \vspace{2pt}
-% \textbf{\large \quad \quad \qquad Student Name 4}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS004}\\ \vspace{1pt}
+% \noindent
+% % \vspace{2pt}
+% % \textbf{\large \quad \quad \qquad Name 1}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS001}\\ \vspace{2pt}
+% % \textbf{\large \quad \quad \qquad Student Name 2}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS002}\\ \vspace{2pt}
+% % \textbf{\large \quad \quad \qquad Student Name 3}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS003}\\ \vspace{2pt}
+% % \textbf{\large \quad \quad \qquad Student Name 4}\qquad \qquad \qquad \qquad \textbf{\large 4SO20CS004}\\ \vspace{1pt}
+% % \justifying
+
+% \begin{center}
+%     \begin{tabular}{l@{\hspace{2cm}}r}
+%       \textbf{\large Aaron Tauro}       & \textbf{4SO21CS002} \\
+%       \textbf{\large Abhik L Salian}    & \textbf{4SO21CS004} \\
+%       \textbf{\large Akhil Shetty M}    & \textbf{4SO21CS013} \\
+%       \textbf{\large H Karthik P Nayak} & \textbf{4SO21CS058} \\
+%     \end{tabular}
+%   \end{center}
 % \justifying
 
-\begin{center}
-    \begin{tabular}{l@{\hspace{2cm}}r}
-      \textbf{\large Aaron Tauro}       & \textbf{4SO21CS002} \\
-      \textbf{\large Abhik L Salian}    & \textbf{4SO21CS004} \\
-      \textbf{\large Akhil Shetty M}    & \textbf{4SO21CS013} \\
-      \textbf{\large H Karthik P Nayak} & \textbf{4SO21CS058} \\
-    \end{tabular}
-  \end{center}
-\justifying
+% \noindent
+% the bonafide students of VIII semester Computer Science \& Engineering in partial fulfillment for the award of Bachelor of Engineering in Computer Science and Engineering of the Visvesvaraya Technological University, Belagavi during the year 2024-2025. It is certified that all corrections/suggestions indicated during Internal Assessment have been incorporated in the report. The project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the said degree.
 
-\noindent
-the bonafide students of VIII semester Computer Science \& Engineering in partial fulfillment for the award of Bachelor of Engineering in Computer Science and Engineering of the Visvesvaraya Technological University, Belagavi during the year 2024-2025. It is certified that all corrections/suggestions indicated during Internal Assessment have been incorporated in the report. The project report has been approved as it satisfies the academic requirements in respect of project work prescribed for the said degree.
+% \par
+% \vspace{0.33in}
+% \setstretch{1.15}
+% \begin{tabbing}
+%     ---------------------------------\hspace{0.3in}\=----------------------------------- \hspace{0.3in}\=--------------------------------- \\
+%     \textbf{Dr Sridevi Saralaya}\>\hspace{0.3in}\textbf{Dr Sridevi Saralaya }\>\hspace{0.3in}\textbf{Dr Rio D'Souza}\\
+%     \hspace{0.5in}Project Guide\>\hspace{0.50in} HOD-CSE \>\hspace{0.6in}Principal
+% \end{tabbing}
 
-\par
-\vspace{0.33in}
-\setstretch{1.15}
-\begin{tabbing}
-    ---------------------------------\hspace{0.3in}\=----------------------------------- \hspace{0.3in}\=--------------------------------- \\
-    \textbf{Dr Sridevi Saralaya}\>\hspace{0.3in}\textbf{Dr Sridevi Saralaya }\>\hspace{0.3in}\textbf{Dr Rio D'Souza}\\
-    \hspace{0.5in}Project Guide\>\hspace{0.50in} HOD-CSE \>\hspace{0.6in}Principal
-\end{tabbing}
-
-\begin{center}
-    \large \textbf{External Viva}:
-\end{center}
-\begin{flushleft}
-    \begin{normalsize}Examiner's Name \end{normalsize}
-    \hspace{6.5cm}
-    \begin{normalsize}Signature with Date\end{normalsize}
-\end{flushleft}
-\vspace{0.1in}
-\begin{flushleft}
-    1. \ldots\ldots\ldots\ldots\ldots\ldots \ldots \hspace{5.8cm}\ldots\ldots\ldots\ldots \ldots\ldots\ldots
-    \par
-    \vspace{0.2in}
-    2. \ldots\ldots\ldots\ldots\ldots\ldots \ldots \hspace{5.8cm}\ldots\ldots\ldots\ldots \ldots\ldots\ldots
-\end{flushleft}
+% \begin{center}
+%     \large \textbf{External Viva}:
+% \end{center}
+% \begin{flushleft}
+%     \begin{normalsize}Examiner's Name \end{normalsize}
+%     \hspace{6.5cm}
+%     \begin{normalsize}Signature with Date\end{normalsize}
+% \end{flushleft}
+% \vspace{0.1in}
+% \begin{flushleft}
+%     1. \ldots\ldots\ldots\ldots\ldots\ldots \ldots \hspace{5.8cm}\ldots\ldots\ldots\ldots \ldots\ldots\ldots
+%     \par
+%     \vspace{0.2in}
+%     2. \ldots\ldots\ldots\ldots\ldots\ldots \ldots \hspace{5.8cm}\ldots\ldots\ldots\ldots \ldots\ldots\ldots
+% \end{flushleft}
 \newpage
 
 % Declaration Page
@@ -231,7 +232,7 @@ the bonafide students of VIII semester Computer Science \& Engineering in partia
 We dedicate this page to acknowledge and thank those responsible for the shaping of the project. Without their guidance and help, the experience while constructing the dissertation would not have been so smooth and efficient.
 \par
 \vspace{0.15in}
-\noindent We sincerely thank our Project guide \textbf{Dr Sridevi Saralaya}, Professor, Computer Science and Engineering for his guidance and valuable suggestions which helped us to complete this project. We also thank our Project coordinators \textbf{Ms Supriya Salian} and \textbf{Dr Saumya Y M},  Dept of CSE, for their consistant encouragement.
+\noindent We sincerely thank our Project guide \textbf{Dr Sridevi Saralaya}, Professor, Computer Science and Engineering for her guidance and valuable suggestions which helped us to complete this project. We also thank our Project coordinators \textbf{Ms Supriya Salian} and \textbf{Dr Saumya Y M},  Dept of CSE, for their consistant encouragement.
 \par
 \vspace{0.15in}
 \noindent We owe a profound gratitude to \textbf{Dr Sridevi Saralaya}, Head of the Department, Computer Science and Engineering, whose kind support and guidance helped us to complete this work successfully
